# Aetherborne

./: Aetherborne.sln  README.md
Aetherborne/: AddTimestamp.cpp  AddTimestamp.h  Aetherborne.vcxproj  Aetherborne.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  Console.cpp  Console.h  ConsoleGUI.cpp  ConsoleGUI.h  main.cpp
Aetherborne/Debug/: vc142.idb
Aetherborne/Debug/Aetherborne.tlog/: Aetherborne.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Aetherborne/Engine/: CMakeLists.txt
Aetherborne/Engine/Header Files/: AddTimestamp.h  BlockingQueue.h  Buffer.h  BufferWriter.h  BufferedQueue.h  Camera.h  CameraSystem.h  Clock.h  Console.h  ConsoleGUI.h  DirectedAcyclicGraph.h  Engine.h  FreeListAllocator.h  Graphics.h  Image.h  Input.h  Math.h  MemoryManager.h  Mesh.h  System.h  UniformWriter.h  Utilities.h  Window.h
Aetherborne/Engine/RenderGraph/: AcquireNode.cpp  AcquireNode.h  PresentNode.cpp  PresentNode.h  RenderGraph.cpp  RenderGraph.h  TransferNode.cpp  TransferNode.h
Aetherborne/Engine/Source Files/: AddTimestamp.cpp  Buffer.cpp  BufferWriter.cpp  Camera.cpp  CameraSystem.cpp  Clock.cpp  Console.cpp  ConsoleGUI.cpp  Engine.cpp  FreeListAllocator.cpp  Graphics.cpp  Image.cpp  Input.cpp  Math.cpp  MemoryManager.cpp  Mesh.cpp  System.cpp  UniformWriter.cpp  Utilities.cpp  Window.cpp
Aetherborne/Game/: CMakeLists.txt  main.cpp
Aetherborne/Game/Header Files/: BlockManager.h  Chunk.h  ChunkManager.h  ChunkMesh.h  ChunkMesher.h  ChunkRenderer.h  ChunkUpdater.h  FramerateCounter.h  FreeCam.h  MeshManager.h  PriorityQueue.h  Renderer.h  SelectionBox.h  TerrainGenerator.h  World.h
Aetherborne/Game/Source Files/: BlockManager.cpp  Chunk.cpp  ChunkManager.cpp  ChunkMesh.cpp  ChunkMesher.cpp  ChunkRenderer.cpp  ChunkUpdater.cpp  FramerateCounter.cpp  FreeCam.cpp  MeshManager.cpp  PriorityQueue.cpp  Renderer.cpp  SelectionBox.cpp  TerrainGenerator.cpp  World.cpp
Aetherborne/x64/Debug/: vc142.idb
Aetherborne/x64/Debug/Aetherborne.tlog/: Aetherborne.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Aetherborne/x64/Release/Aetherborne.tlog/: Aetherborne.lastbuildstate  Aetherborne.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: Aetherborne.ilk
x64/Release/: Aetherborne.iobj  Aetherborne.ipdb
